syntax = "proto3";

package GrpcDemoService;

service GrpcDemoService {
    rpc Hello(HelloRequest) returns(HelloResponse) {}
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string returnString = 1;
}